--- a/css/styles.compact.css
+++ b/css/styles.compact.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@300&family=Roboto&display=swap");
 * { margin: 0; padding: 0; }
 
-html { box-sizing: border-box; background-color: #1d1d1d; }
+html { box-sizing: border-box; background-color: #1d1d1d; scroll-behavior: smooth; overflow-x: hidden; }
 
 *, *:after, *:before { box-sizing: inherit; }
 
@@ -12,6 +12,18 @@ body { margin: 0 auto; color: #fff; font-family: 'Montserrat', sans-serif; }
 h1, h2 { font-family: 'Montserrat', sans-serif; }
 
 .text-wrapper { max-width: 1200px; margin: 0 auto; position: relative; }
+
+.fade-in { opacity: 0; transition: opacity 1000ms ease-in; }
+
+.fade-in.appear { opacity: 1; }
+
+.from-left { -webkit-transform: translateY(-5%); transform: translateY(-5%); }
+
+.from-right { -webkit-transform: translateY(5%); transform: translateY(5%); }
+
+.from-left, .from-right { transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in; transition: opacity 250ms ease-in, transform 400ms ease-in; transition: opacity 250ms ease-in, transform 400ms ease-in, -webkit-transform 400ms ease-in; opacity: 0; }
+
+.from-left.appear, .from-right.appear { -webkit-transform: translatY(0); transform: translateY(0); opacity: 1; }
 
 /* ----------HEADER-NAVIGATION------------- */
 #header { position: sticky; z-index: 999; background: #1d1d1d; -webkit-box-shadow: 0 8px 6px -6px #12fcd8; -moz-box-shadow: 0 8px 6px -6px #12fcd8; box-shadow: 0 8px 6px -6px #12fcd8; }
@@ -144,7 +156,8 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
   #mob-exit { display: block; z-index: 999; }
   #ham-btn-cta { display: block; }
   .hamburger { flex: 1 1 0; font-size: 2.5em; text-align: right; padding: 0.5em; }
-  .fa-times-circle { display: block; font-size: 2em; margin: 0.5em; text-align: left; } }
+  .fa-times-circle { display: block; font-size: 2em; margin: 0.5em; text-align: left; }
+  .intro-head { margin-bottom: 8%; } }
 
 @media screen and (max-width: 498px) { .intro-head h1 { font-size: 3.5em; }
   .image-self { flex: 1 0 0; order: 1; z-index: 3; }
@@ -159,9 +172,9 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 
 .about-image-self img { width: 350px; border-radius: 200px 50px 200px; transform: rotate(-10deg); }
 
-.about-image-self img:hover { filter: sepia(50%); }
+.about-head { margin: 10%; font-size: 1.3em; line-height: 1.5em; }
 
-.about-head { margin: 10%; font-size: 1.2em; line-height: 1.5em; }
+.about-head h3 { font-size: 1.8em; margin-bottom: 4%; }
 
 @media screen and (max-width: 884px) { .about-flex { flex-flow: column wrap; align-items: center; }
   .about-image-self img { width: 70vw; transform: rotate(0deg); } }
@@ -171,7 +184,11 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 /* ----------SKILLS SECTION------------- */
 #skills-section { position: relative; background-image: url("../image/glen-carsten-unplash.jpg"); background-position: right; background-size: cover; background-repeat: no-repeat; background-color: #201e1e; }
 
-.skill-flex { display: flex; flex-flow: row wrap; align-items: center; gap: 4%; padding: 5%; }
+.skill-flex { display: flex; flex-flow: row wrap; align-items: center; gap: 3%; padding: 5% 0; }
+
+.edu-section-div { max-width: 50%; background: #fff; color: #000; padding: 2%; opacity: 0.8; }
+
+.edu-section-div h3 { margin-bottom: 1em; font-size: 1.5em; }
 
 .skill-heading h2 { text-align: right; font-size: 3em; padding: 8%; color: #12fcd8; }
 
@@ -180,6 +197,12 @@ h1, h2 { font-family: 'Montserrat', sans-serif; }
 .backend-container h3, .front-container h3 { margin-bottom: 0.5em; }
 
 .backend-container { width: 227px; height: 300px; position: relative; background-color: #3f4042; font-size: 0.8em; padding: 2%; opacity: 0.80; color: #fff; }
+
+.edu-div { margin-bottom: 2%; line-height: 1.4em; }
+
+.edu-div h4 { font-size: 1.2em; }
+
+.edu-div span { font-weight: bolder; }
 
 .backend-container h3, .front-container h3 { font-size: 20px; text-align: center; padding-top: 15%; }
 
@@ -191,7 +214,7 @@ ul.skill-list { margin: 0; }
 
 .fa-check-circle { margin-right: 0.5em; color: #12fcd8; }
 
-.skill-language-div { background-color: #fff; opacity: 0.8; }
+.skill-language-div { background-color: #fff; opacity: 0.9; }
 
 .skill-language-div h3 { color: #000; text-align: center; font-size: 1.6em; padding: 3% 0 1%; border-bottom: 2px solid #000; }
 
@@ -227,7 +250,10 @@ ul.skill-list { margin: 0; }
 
 .col-text { display: flex; align-items: center; justify-content: center; }
 
-.aligner-item { width: 60%; }
+.aligner-item { width: 80%; }
+
+@media (max-width: 1030px) { .skill-flex { justify-content: center; }
+  .edu-section-div { margin-top: 3%; display: block; min-width: 100%; margin-left: 1em; margin-right: 1em; } }
 
 @media (max-width: 998px) { .col img { padding-left: 0; } }
 
@@ -235,7 +261,8 @@ ul.skill-list { margin: 0; }
   .col-left { -webkit-box-ordinal-group: 0; -ms-flex-order: 0; order: 0; }
   .col-text div p { padding: 1em; }
   .aligner-item { width: 100%; }
-  .col img { width: 100%; padding: 2%; } }
+  .col img { width: 100%; padding: 2%; }
+  .col h3 { text-align: center; padding-top: 0; } }
 
 /* ----------CONTACT FORM------------- */
 #contact-section { background-color: #013A6B; background-image: -webkit-linear-gradient(30deg, #1d1d1d 50%, #222 50%); }
@@ -274,13 +301,14 @@ form .form-row .textarea { height: 70px; }
 
 .input-data .underline { position: absolute; bottom: 0; height: 2px; width: 100%; }
 
-.form-btn input[type="submit"] { font-size: 16px; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; cursor: pointer; padding: 0.5em 1em; width: 35%; margin-left: 2%; text-align: center; border: 2px solid #12fcd8; background-color: #1d1d1d; color: #12fcd8; }
+.input-data #my-form-button { font-size: 16px; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; cursor: pointer; padding: 0.5em 1em; width: 200px; margin-left: 2%; text-align: center; border: 2px solid #12fcd8; background-color: #1d1d1d; color: #12fcd8; }
 
-.form-btn input[type="submit"]:hover { transform: scale(1.1); }
+.input-data #my-form-button:hover { transform: scale(1.1); }
 
-@media (max-width: 700px) { .container .text { font-size: 20px; }
-  .input-data input, .textarea textarea { display: block; width: 100%; height: 100%; border: 2px solid #000; font-size: 17px; background: #fff; }
-  .container form { padding: 10px; }
+@media (max-width: 700px) { .container { max-width: 100%; color: #fff; border: 2px solid #12fcd8; }
+  .container .text { font-size: 20px; }
+  form .form-row .input-data { margin: 0; }
+  .input-data input .textarea textarea { display: flex; min-width: 100%; min-height: 100%; border: 2px solid #000; font-size: 17px; background: #fff; justify-content: center; margin-left: 20px; }
   .container form .form-row { display: block; }
   .container form .form-row input[type="email"] { margin: 15px 0; }
   .row-block { margin-top: 15px; }
