--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 html {
   box-sizing: border-box;
   background-color: #1d1d1d;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 *,
@@ -37,6 +39,40 @@ h2 {
   max-width: 1200px;
   margin: 0 auto;
   position: relative;
+}
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
+}
+
+.fade-in.appear {
+  opacity: 1;
+}
+
+.from-left {
+  -webkit-transform: translateY(-5%);
+  transform: translateY(-5%);
+}
+
+.from-right {
+  -webkit-transform: translateY(5%);
+  transform: translateY(5%);
+}
+
+.from-left,
+.from-right {
+  transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in, -webkit-transform 400ms ease-in;
+  opacity: 0;
+}
+
+.from-left.appear,
+.from-right.appear {
+  -webkit-transform: translatY(0);
+  transform: translateY(0);
+  opacity: 1;
 }
 
 /* ----------HEADER-NAVIGATION------------- */
@@ -470,6 +506,9 @@ h2 {
     margin: 0.5em;
     text-align: left;
   }
+  .intro-head {
+    margin-bottom: 8%;
+  }
 }
 
 @media screen and (max-width: 498px) {
@@ -509,14 +548,15 @@ h2 {
   transform: rotate(-10deg);
 }
 
-.about-image-self img:hover {
-  filter: sepia(50%);
-}
-
 .about-head {
   margin: 10%;
-  font-size: 1.2em;
+  font-size: 1.3em;
   line-height: 1.5em;
+}
+
+.about-head h3 {
+  font-size: 1.8em;
+  margin-bottom: 4%;
 }
 
 @media screen and (max-width: 884px) {
@@ -555,8 +595,21 @@ h2 {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  gap: 4%;
-  padding: 5%;
+  gap: 3%;
+  padding: 5% 0;
+}
+
+.edu-section-div {
+  max-width: 50%;
+  background: #fff;
+  color: #000;
+  padding: 2%;
+  opacity: 0.8;
+}
+
+.edu-section-div h3 {
+  margin-bottom: 1em;
+  font-size: 1.5em;
 }
 
 .skill-heading h2 {
@@ -591,6 +644,19 @@ h2 {
   padding: 2%;
   opacity: 0.80;
   color: #fff;
+}
+
+.edu-div {
+  margin-bottom: 2%;
+  line-height: 1.4em;
+}
+
+.edu-div h4 {
+  font-size: 1.2em;
+}
+
+.edu-div span {
+  font-weight: bolder;
 }
 
 .backend-container h3,
@@ -630,7 +696,7 @@ ul.skill-list {
 
 .skill-language-div {
   background-color: #fff;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .skill-language-div h3 {
@@ -745,7 +811,20 @@ ul.skill-list {
 }
 
 .aligner-item {
-  width: 60%;
+  width: 80%;
+}
+
+@media (max-width: 1030px) {
+  .skill-flex {
+    justify-content: center;
+  }
+  .edu-section-div {
+    margin-top: 3%;
+    display: block;
+    min-width: 100%;
+    margin-left: 1em;
+    margin-right: 1em;
+  }
 }
 
 @media (max-width: 998px) {
@@ -775,6 +854,10 @@ ul.skill-list {
   .col img {
     width: 100%;
     padding: 2%;
+  }
+  .col h3 {
+    text-align: center;
+    padding-top: 0;
   }
 }
 
@@ -889,14 +972,14 @@ form .form-row .textarea {
   width: 100%;
 }
 
-.form-btn input[type="submit"] {
+.input-data #my-form-button {
   font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 1px;
   cursor: pointer;
   padding: 0.5em 1em;
-  width: 35%;
+  width: 200px;
   margin-left: 2%;
   text-align: center;
   border: 2px solid #12fcd8;
@@ -904,25 +987,31 @@ form .form-row .textarea {
   color: #12fcd8;
 }
 
-.form-btn input[type="submit"]:hover {
+.input-data #my-form-button:hover {
   transform: scale(1.1);
 }
 
 @media (max-width: 700px) {
+  .container {
+    max-width: 100%;
+    color: #fff;
+    border: 2px solid #12fcd8;
+  }
   .container .text {
     font-size: 20px;
   }
-  .input-data input,
-  .textarea textarea {
-    display: block;
-    width: 100%;
-    height: 100%;
+  form .form-row .input-data {
+    margin: 0;
+  }
+  .input-data input .textarea textarea {
+    display: flex;
+    min-width: 100%;
+    min-height: 100%;
     border: 2px solid #000;
     font-size: 17px;
     background: #fff;
-  }
-  .container form {
-    padding: 10px;
+    justify-content: center;
+    margin-left: 20px;
   }
   .container form .form-row {
     display: block;
