--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@300&family=Roboto&display=swap');
+$primary-page-color: #1d1d1d;
 
 * {
   margin: 0;
@@ -7,7 +8,9 @@
 
 html {
   box-sizing: border-box;
-  background-color: #1d1d1d;
+  background-color: $primary-page-color;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 *,
@@ -39,11 +42,45 @@ h2 {
   margin: 0 auto;
   position: relative;
 }
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
+}
+
+.fade-in.appear {
+  opacity: 1;
+}
+
+.from-left {
+  -webkit-transform: translateY(-5%);
+  transform: translateY(-5%);
+}
+
+.from-right {
+  -webkit-transform: translateY(5%);
+  transform: translateY(5%);
+}
+
+.from-left,
+.from-right {
+  transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in, -webkit-transform 400ms ease-in;
+  opacity: 0;
+}
+
+.from-left.appear,
+.from-right.appear {
+  -webkit-transform: translatY(0);
+  transform: translateY(0);
+  opacity: 1;
+}
 /* ----------HEADER-NAVIGATION------------- */
 #header {
   position: sticky;
   z-index: 999;
-  background: #1d1d1d;
+  background: $primary-page-color;
   -webkit-box-shadow: 0 8px 6px -6px #12fcd8;
   -moz-box-shadow: 0 8px 6px -6px #12fcd8;
   box-shadow: 0 8px 6px -6px #12fcd8;
@@ -139,7 +176,7 @@ h2 {
   // background-position: right;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: #1d1d1d;
+  background-color: $primary-page-color;
   overflow: hidden;
   position: relative;
 }
@@ -192,7 +229,7 @@ h2 {
 .circle {
   width: 100%;
   height: 100%;
-  background: #1d1d1d;
+  background: $primary-page-color;
   filter: blur(10px);
   position: absolute;
   border-radius: 80%;
@@ -449,8 +486,6 @@ h2 {
     }
   }
 
-
-
   #menu {
     display: none;
     background-color: #000;
@@ -475,10 +510,7 @@ h2 {
   #ham-btn-cta {
     display: block;
   }
-  // .nav-flex {
-  //   display: flex;
-  //   flex-direction: row;
-  // }
+
   .hamburger {
     flex: 1 1 0;
     font-size: 2.5em;
@@ -491,6 +523,10 @@ h2 {
     font-size: 2em;
     margin: 0.5em;
     text-align: left;
+  }
+
+  .intro-head {
+    margin-bottom: 8%;
   }
 }
 @media screen and (max-width:498px) {
@@ -512,7 +548,7 @@ h2 {
 /* ----------ABOUT ME SECTION------------- */
 #about-section {
   background-color: #013A6B;
-  background-image: -webkit-linear-gradient(-30deg, #1d1d1d 50%, #222 50%);
+  background-image: -webkit-linear-gradient(-30deg, $primary-page-color 50%, #222 50%);
 }
 
 .about-flex {
@@ -528,17 +564,18 @@ h2 {
     width: 350px;
     border-radius: 200px 50px 200px;
     transform: rotate(-10deg);
-
-    &:hover {
-      filter: sepia(50%);
-    }
   }
 }
 
 .about-head {
   margin: 10%;
-  font-size: 1.2em;
+  font-size: 1.3em;
   line-height: 1.5em;
+
+  h3 {
+    font-size: 1.8em;
+    margin-bottom: 4%;
+  }
 }
 @media screen and (max-width:884px) {
   .about-flex {
@@ -576,8 +613,21 @@ h2 {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  gap: 4%;
-  padding: 5%;
+  gap: 3%;
+  padding: 5% 0;
+}
+
+.edu-section-div {
+  max-width: 50%;
+  background: #fff;
+  color: #000;
+  padding: 2%;
+  opacity: 0.8;
+
+  h3 {
+    margin-bottom: 1em;
+    font-size: 1.5em;
+  }
 }
 
 .skill-heading h2 {
@@ -612,6 +662,19 @@ h2 {
   padding: 2%;
   opacity: 0.80;
   color: #fff;
+}
+
+.edu-div {
+  margin-bottom: 2%;
+  line-height: 1.4em;
+
+  h4 {
+    font-size: 1.2em;
+  }
+
+  span {
+    font-weight: bolder;
+  }
 }
 
 .backend-container h3,
@@ -651,7 +714,7 @@ ul.skill-list {
 
 .skill-language-div {
   background-color: #fff;
-  opacity: 0.8;
+  opacity: 0.9;
 
   h3 {
     color: #000;
@@ -684,7 +747,7 @@ ul.skill-list {
 
 #features-section {
   background-color: #013A6B;
-  background-image: -webkit-linear-gradient(-180deg, #1d1d1d 50%, #222 50%);
+  background-image: -webkit-linear-gradient(-180deg, $primary-page-color 50%, #222 50%);
   position: relative;
 }
 /* FEATURE TEST */
@@ -754,7 +817,7 @@ ul.skill-list {
 .col-left {
   -ms-flex-order: -1;
   order: -1;
-  background-color: #1d1d1d;
+  background-color: $primary-page-color;
 }
 
 .col-text {
@@ -764,7 +827,20 @@ ul.skill-list {
 }
 
 .aligner-item {
-  width: 60%;
+  width: 80%;
+}
+@media (max-width: 1030px) {
+  .skill-flex {
+    justify-content: center;
+  }
+
+  .edu-section-div {
+    margin-top: 3%;
+    display: block;
+    min-width: 100%;
+    margin-left: 1em;
+    margin-right: 1em;
+  }
 }
 @media (max-width: 998px) {
   .col img {
@@ -793,15 +869,22 @@ ul.skill-list {
     width: 100%;
   }
 
-  .col img {
-    width: 100%;
-    padding: 2%;
+  .col {
+    img {
+      width: 100%;
+      padding: 2%;
+    }
+
+    h3 {
+      text-align: center;
+      padding-top: 0;
+    }
   }
 }
 /* ----------CONTACT FORM------------- */
 #contact-section {
   background-color: #013A6B;
-  background-image: -webkit-linear-gradient(30deg, #1d1d1d 50%, #222 50%);
+  background-image: -webkit-linear-gradient(30deg, $primary-page-color 50%, #222 50%);
 }
 
 .wrap {
@@ -909,18 +992,18 @@ form .form-row .textarea {
   width: 100%;
 }
 
-.form-btn input[type="submit"] {
+.input-data #my-form-button {
   font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 1px;
   cursor: pointer;
   padding: 0.5em 1em;
-  width: 35%;
+  width: 200px;
   margin-left: 2%;
   text-align: center;
   border: 2px solid #12fcd8;
-  background-color: #1d1d1d;
+  background-color: $primary-page-color;
   color: #12fcd8;
 
   &:hover {
@@ -928,22 +1011,29 @@ form .form-row .textarea {
   }
 }
 @media (max-width: 700px) {
+  .container {
+    max-width: 100%;
+    color: #fff;
+    border: 2px solid #12fcd8;
+  }
+
   .container .text {
     font-size: 20px;
   }
 
-  .input-data input,
-  .textarea textarea {
-    display: block;
-    width: 100%;
-    height: 100%;
+  form .form-row .input-data {
+    margin: 0;
+  }
+
+  .input-data input .textarea textarea {
+    display: flex;
+    min-width: 100%;
+    min-height: 100%;
     border: 2px solid #000;
     font-size: 17px;
     background: #fff;
-  }
-
-  .container form {
-    padding: 10px;
+    justify-content: center;
+    margin-left: 20px;
   }
 
   .container form .form-row {
@@ -1036,18 +1126,15 @@ form .form-row .textarea {
   text-decoration: none;
   color: #fff;
 
-  &:hover{
-      color: #12fcd8;
-      text-decoration: underline;
-    }
+  &:hover {
+    color: #12fcd8;
+    text-decoration: underline;
   }
-
+}
 
 .menu-footer ul:last-child {
   margin-right: 72px;
 }
-
-
 
 i:hover {
   color: #12fcd8;
@@ -1061,8 +1148,6 @@ i:hover {
   .menu-footer {
     display: none;
   }
-
-
 }
 @media screen and (max-width:1160px) {
   .wrap {
